--- a/ranking/index.html
+++ b/ranking/index.html
@@ -44,14 +44,14 @@
     <table id="rankingRato">
         <tbody>
             <tr>
-                <td>
+                <td data-label="Nick">
                     <img src="./user_icon.png" 
                          alt="Avatar do Rato" 
                          style="width: 35px; height: 35px; border-radius: 50%; vertical-align: middle; margin-right: 8px;">
                     Rato Safado
                 </td>
-                <td class="poder-total"></td>
-                <td class="progresso"></td>
+                <td data-label="Poder Total" class="poder-total"></td>
+                <td data-label="Progresso" class="progresso"></td>
             </tr>
             <!-- Adicione mais linhas aqui, se necessário -->
         </tbody>
