--- a/ranking/index.html
+++ b/ranking/index.html
@@ -40,8 +40,8 @@
             <div id="progress-bar" class="progress-bar">0%</div>
         </div>
 
-        <div class="ranking2">
-    <table id="rankingRato">
+        <div class="ranking">
+    <table id="rankingTable">
         <tbody>
             <tr>
                 <td data-label="Nick">
