--- a/ranking/index.html
+++ b/ranking/index.html
@@ -80,6 +80,25 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <tr style="margin-bottom: 10px;">
+                        <td></td>
+                        <td></td>
+                        <td data-label="Nick">
+                        <img src="./user_icon.png" 
+                             alt="Avatar do Rato" 
+                             style="width: 35px; height: 35px; border-radius: 50%; vertical-align: middle; margin-right: 8px;">
+                        Rato Safado
+                        </td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td data-label="Poder Total" class="poder-total"></td>
+                        <td data-label="Progresso" class="progresso"></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
                     <!-- Os dados serão inseridos aqui -->
                 </tbody>
             </table>
