--- a/ranking/index.html
+++ b/ranking/index.html
@@ -43,15 +43,24 @@
         <div class="ranking">
     <table id="rankingTable">
         <tbody>
-            <tr>
+            <tr style="margin-bottom: 10px;">
+                <td></td>
+                <td></td>
                 <td data-label="Nick">
-                    <img src="./user_icon.png" 
-                         alt="Avatar do Rato" 
-                         style="width: 35px; height: 35px; border-radius: 50%; vertical-align: middle; margin-right: 8px;">
-                    Rato Safado
+                <img src="./user_icon.png" 
+                     alt="Avatar do Rato" 
+                        style="width: 35px; height: 35px; border-radius: 50%; vertical-align: middle; margin-right: 8px;">
+                Rato Safado
                 </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td data-label="Poder Total" class="poder-total"></td>
                 <td data-label="Progresso" class="progresso"></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
             <!-- Adicione mais linhas aqui, se necessário -->
         </tbody>
