--- a/ranking/index.html
+++ b/ranking/index.html
@@ -40,7 +40,7 @@
             <div id="progress-bar" class="progress-bar">0%</div>
         </div>
 
-        <div class="ranking">
+        <!--<div class="ranking">
     <table id="rankingTable">
         <tbody>
             <tr style="margin-bottom: 10px;">
@@ -62,10 +62,9 @@
                 <td></td>
                 <td></td>
             </tr>
-            <!-- Adicione mais linhas aqui, se necessário -->
         </tbody>
     </table>
-</div>
+</div>-->
 
         
         <div class="ranking">
