--- a/ranking/index.html
+++ b/ranking/index.html
@@ -88,7 +88,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr style="margin-bottom: 10px;">
+                    <tr style="margin-bottom: 10px !important;">
                         <td></td>
                         <td></td>
                         <td data-label="Nick">
