--- a/ranking/index.html
+++ b/ranking/index.html
@@ -60,7 +60,7 @@
         
         <div class="ranking">
             <h1>Ranking da Comunidade</h1>
-            <h3>113 Membros - Referência: 16/01/2025</h3>
+            <h3>Olá! Aguarde um pouco que os dados estão sendo carregados...</h3>
             <table id="rankingTable">
                 <thead>
                     <tr>
