--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <!--<a href="https://docs.google.com/forms/d/e/1FAIpQLSe6TwbTGZjSw-RsOi8xENyGPykY_34qukqMuNNOlqa2v32g1A/viewform" target="_blank">Passo 3: Responder o Formulário</a>-->
             <h2>Task TimeWall</h2>
             <a href="https://youtu.be/TpdYh4UKzhE" target="_blank">Vídeo Tutorial</a>
-            <a href="https://mpago.li/1E7rwFm" target="_blank">Cartão Grátis + R$20 de Bônus</a>
+            <a href="https://mpago.li/2u71oNR" target="_blank">Cartão Grátis + R$20 de Bônus</a>
             <h2>Reset de Jogos</h2>
             <a href="https://www.youtube.com/watch?v=Wj4AaY9-ZmA" target="_blank">Vídeo Tutorial</a>
             <a href="https://docs.google.com/spreadsheets/d/1EgiSq3401Ul1ckDfdqzroW1UGjCoIuwL/edit?usp=sharing&ouid=116302633550564034399" target="_blank">Planilha de Controle</a>
