--- a/ranking/index.html
+++ b/ranking/index.html
@@ -74,8 +74,8 @@
                         <th>Racks</th>
                         <th>Poder Total</th>
                         <th>Progresso</th>
-                        <th>Link</th>
-                        <th>Farm</th>
+                   <!--     <th>Link</th>
+                        <th>Farm</th> -->
                         <th>Hist</th>
                     </tr>
                 </thead>
