--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Calculadora de Farm</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RKFox - Calculadora de Farm</title>
+    <link rel="stylesheet" href="styles5.css">
+    <script src="https://apis.google.com/js/api.js"></script>
+    <script src="contador.js"></script>
   <style>
     * {
       margin: 0;
@@ -81,7 +85,29 @@
   </style>
 </head>
 <body>
-  <div class="container">
+      <div class="container">
+        <div class="ref1">
+            <!-- Start rollercoin.com code -->
+            <a href="https://rollercoin.com/?r=kyluudij">
+                <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png" alt="Rollercoin Referral">
+            </a>
+            <!-- End rollercoin.com code -->
+        </div>
+        <div class="profile">
+            <a href="https://rk-fox.github.io/">
+                <img src="/images/profile.png" alt="Foto de Perfil" class="profile-pic">
+            </a>
+        </div>
+        <div class="banner">
+            <a href="https://rk-fox.github.io/">
+                <img src="/images/banner.png" alt="Banner" class="banner-img">
+            </a>
+        </div>
+        <!-- Toggle Switch -->
+        <label class="switch">
+            <input type="checkbox" id="toggle-dark-mode">
+            <span class="slider"></span>
+        </label>
     <h2>Calculadora de Farm</h2>
     <p>Preencha <strong>apenas um</strong> dos campos abaixo:</p>
     
@@ -143,5 +169,21 @@
       }
     }
   </script>
+  
+        <div class="ref">
+            <!-- Start rollercoin.com code -->
+            <a href="https://rollercoin.com/?r=kyluudij">
+                <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png" alt="Rollercoin Referral">
+            </a>
+            <!-- End rollercoin.com code -->
+        </div>
+
+        <div class="email">
+            <h4>Contato Profissional: <a href="mailto:canalrkfox@gmail.com">canalrkfox@gmail.com</a></h4>
+        </div>
+    </div>
+
+    <script src="calculadora.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
