--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -50,9 +50,8 @@
                     </tr>
                     <tr>
                         <td><label for="poderConta">Poder da Conta:</label></td>
-                        <td><input type="number" id="poderConta" placeholder="Poder da Conta">
-                            <select id="unidadePoder"><option value="Zhs">Zhs</option><option value="Ehs">Ehs</option><option value="Phs">Phs</option><option value="Ths">Ths</option><option value="Ghs">Ghs</option></select>
-                        </td>
+                        <td><input type="number" id="poderConta" placeholder="Poder da Conta"></td>
+                        <td></td><select id="unidadePoder"><option value="Zhs">Zhs</option><option value="Ehs">Ehs</option><option value="Phs">Phs</option><option value="Ths">Ths</option><option value="Ghs">Ghs</option></select></td>
                     </tr>
                 </table>
                 
