--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -38,7 +38,7 @@
             
             <form id="craft-form">
                 <table class="form-table">
-                    <th colspan="2">Dados do Usuário</th>
+                    <th colspan="3">Dados do Usuário</th>
                     <tr>
                     </tr>
                     <tr>
@@ -51,7 +51,7 @@
                     <tr>
                         <td><label for="poderConta">Poder da Conta:</label></td>
                         <td><input type="number" id="poderConta" placeholder="Poder da Conta"></td>
-                        <td></td><select id="unidadePoder"><option value="Zhs">Zhs</option><option value="Ehs">Ehs</option><option value="Phs">Phs</option><option value="Ths">Ths</option><option value="Ghs">Ghs</option></select></td>
+                        <td><select id="unidadePoder"><option value="Zhs">Zhs</option><option value="Ehs">Ehs</option><option value="Phs">Phs</option><option value="Ths">Ths</option><option value="Ghs">Ghs</option></select></td>
                     </tr>
                 </table>
                 
