--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -60,14 +60,29 @@
             </form>
 
             <div class="result">
+                <table id="perfil">
+                    <thead>
+                        <tr>
+                            <th style="width: 33,33%;">Avatar</th>
+                            <th style="width: 33,33%;">Nome</th>
+                            <th style="width: 33,33%;">Poder</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- As linhas da tabela serão geradas aqui pelo JavaScript -->
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="result">
                 <table id="resultado-tabela">
                     <thead>
                         <tr>
-                            <th style="width: 20%;">Multi</th>
-                            <th style="width: 20%;">Quantidade</th>
-                            <th style="width: 20%;">Custo</th>
-                            <th style="width: 20%;">Venda</th>
-                            <th style="width: 20%;">Saldo</th>
+                            <th style="width: 20%;">TOKEN</th>
+                            <th style="width: 20%;">REDE</th>
+                            <th style="width: 20%;">RECOMPENSA</th>
+                            <th style="width: 20%;">FARM</th>
+                            <th style="width: 20%;">SAQUE</th>
                         </tr>
                     </thead>
                     <tbody>
