--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -69,7 +69,11 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <!-- As linhas da tabela serão geradas aqui pelo JavaScript -->
+                        <tr>
+                            <td><img id="avatar" src="" alt="Avatar do usuário" style="display: none; margin: auto;"></td>
+                            <td id="welcomeMessage"></td>
+                            <td id="poderAtual"></td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
