--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -90,7 +90,83 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <!-- As linhas da tabela serão geradas aqui pelo JavaScript -->
+                        <tr>
+                            <td>RLT</td>
+                            <td>2.3 Zhs</td>
+                            <td>0.01RLT/1.00$</td>
+                            <td>0.00047</td>
+                            <td>4 dias</td>
+                        </tr>
+                        <tr>
+                            <td>RST</td>
+                            <td>2.3 Zhs</td>
+                            <td>0.01</td>
+                            <td>0.00047</td>
+                            <td>4 dias</td>
+                        </tr>
+                        <tr>
+                            <td>BTC</td>
+                            <td>2.3 Zhs</td>
+                            <td>0.01</td>
+                            <td>0.00047</td>
+                            <td>4 dias</td>
+                        </tr>
+                        <tr>
+                            <td>LTC</td>
+                            <td>2.3 Zhs</td>
+                            <td>0.01</td>
+                            <td>0.00047</td>
+                            <td>4 dias</td>
+                        </tr>
+                        <tr>
+                            <td>BNB</td>
+                            <td>2.3 Zhs</td>
+                            <td>0.01</td>
+                            <td>0.00047</td>
+                            <td>4 dias</td>
+                        </tr>
+                        <tr>
+                            <td>POL</td>
+                            <td>2.3 Zhs</td>
+                            <td>0.01</td>
+                            <td>0.00047</td>
+                            <td>4 dias</td>
+                        </tr>
+                        <tr>
+                            <td>XRP</td>
+                            <td>2.3 Zhs</td>
+                            <td>0.01</td>
+                            <td>0.00047</td>
+                            <td>4 dias</td>
+                        </tr>
+                        <tr>
+                            <td>DOGE</td>
+                            <td>2.3 Zhs</td>
+                            <td>0.01</td>
+                            <td>0.00047</td>
+                            <td>4 dias</td>
+                        </tr>
+                        <tr>
+                            <td>ETH</td>
+                            <td>2.3 Zhs</td>
+                            <td>0.01</td>
+                            <td>0.00047</td>
+                            <td>4 dias</td>
+                        </tr>
+                        <tr>
+                            <td>TRX</td>
+                            <td>2.3 Zhs</td>
+                            <td>0.01</td>
+                            <td>0.00047</td>
+                            <td>4 dias</td>
+                        </tr>
+                        <tr>
+                            <td>SOL</td>
+                            <td>2.3 Zhs</td>
+                            <td>0.01</td>
+                            <td>0.00047</td>
+                            <td>4 dias</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
