--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -63,9 +63,10 @@
                 <table id="perfil">
                     <thead>
                         <tr>
-                            <th style="width: 33,33%;">Avatar</th>
-                            <th style="width: 33,33%;">Nome</th>
-                            <th style="width: 33,33%;">Poder</th>
+                            <th style="width: 25%;">Avatar</th>
+                            <th style="width: 25%;">Nome</th>
+                            <th style="width: 25%;">Poder</th>
+                            <th style="width: 25%;">Liga</th>
                         </tr>
                     </thead>
                     <tbody>
