--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -74,6 +74,7 @@
                             <td><img id="avatar" src="" alt="Avatar do usuário" style="display: none; margin: auto;"></td>
                             <td id="welcomeMessage"></td>
                             <td id="poderAtual"></td>
+                            <td id="ligaAtual"></td>
                         </tr>
                     </tbody>
                 </table>
