--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -84,20 +84,33 @@
                 <table id="resultado-tabela">
                     <thead>
                         <tr>
-                            <th style="width: 20%;">TOKEN</th>
-                            <th style="width: 20%;">REDE</th>
-                            <th style="width: 20%;">RECOMPENSA</th>
-                            <th style="width: 20%;">FARM</th>
-                            <th style="width: 20%;">SAQUE</th>
+                            <th>TOKEN</th>
+                            <th>TEMPO</th>
+                            <th>RECOMPENSA</th>
+                            <th>FARM</th>
+                            <th>FARM</th>
+                            <th>FARM</th>
+                            <th>SAQUE</th>
+                        </tr>
+                        <tr>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th>BLOCO</th>
+                            <th>DIA</th>
+                            <th>MÊS</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>RLT</td>
-                            <td>2.3 Zhs</td>
+                            <td>10:00</td>
                             <td>0.01RLT/1.00$</td>
                             <td>0.00047</td>
-                            <td>4 dias</td>
+                            <td>0.06768</td>
+                            <td>2.0304</td>
+                            <td>3.7 dias</td>
                         </tr>
                         <tr>
                             <td>RST</td>
