--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -72,9 +72,9 @@
                     <tbody>
                         <tr>
                             <td><img id="avatar" src="" alt="Avatar do usuário" style="display: none; margin: auto;"></td>
-                            <td id="welcomeMessage"></td>
-                            <td id="poderAtual"></td>
-                            <td id="ligaAtual"></td>
+                            <td><span id="nome"></span></td>
+                            <td><span id="poderAtual"></span></td>
+                            <td><span id="ligaAtual"></span></td>
                         </tr>
                     </tbody>
                 </table>
