--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -84,22 +84,16 @@
                 <table id="resultado-tabela">
                     <thead>
                         <tr>
-                            <th>TOKEN</th>
-                            <th>TEMPO</th>
-                            <th>RECOMPENSA</th>
-                            <th>FARM</th>
-                            <th>FARM</th>
-                            <th>FARM</th>
-                            <th>SAQUE</th>
+                            <th rowspan="2">TOKEN</th>
+                            <th rowspan="2">TEMPO</th>
+                            <th rowspan="2">RECOMPENSA</th>
+                            <th colspan="3">FARM</th>
+                            <th rowspan="2">SAQUE</th>
                         </tr>
                         <tr>
-                            <th></th>
-                            <th></th>
-                            <th></th>
                             <th>BLOCO</th>
                             <th>DIA</th>
                             <th>MÊS</th>
-                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
