--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -108,73 +108,93 @@
                         </tr>
                         <tr>
                             <td>RST</td>
-                            <td>2.3 Zhs</td>
-                            <td>0.01</td>
+                            <td>10:00</td>
+                            <td>0.01RLT/1.00$</td>
                             <td>0.00047</td>
-                            <td>4 dias</td>
+                            <td>0.06768</td>
+                            <td>2.0304</td>
+                            <td>3.7 dias</td>
                         </tr>
                         <tr>
                             <td>BTC</td>
-                            <td>2.3 Zhs</td>
-                            <td>0.01</td>
+                            <td>10:00</td>
+                            <td>0.01RLT/1.00$</td>
                             <td>0.00047</td>
-                            <td>4 dias</td>
+                            <td>0.06768</td>
+                            <td>2.0304</td>
+                            <td>3.7 dias</td>
                         </tr>
                         <tr>
                             <td>LTC</td>
-                            <td>2.3 Zhs</td>
-                            <td>0.01</td>
+                            <td>10:00</td>
+                            <td>0.01RLT/1.00$</td>
                             <td>0.00047</td>
-                            <td>4 dias</td>
+                            <td>0.06768</td>
+                            <td>2.0304</td>
+                            <td>3.7 dias</td>
                         </tr>
                         <tr>
                             <td>BNB</td>
-                            <td>2.3 Zhs</td>
-                            <td>0.01</td>
+                            <td>10:00</td>
+                            <td>0.01RLT/1.00$</td>
                             <td>0.00047</td>
-                            <td>4 dias</td>
+                            <td>0.06768</td>
+                            <td>2.0304</td>
+                            <td>3.7 dias</td>
                         </tr>
                         <tr>
                             <td>POL</td>
-                            <td>2.3 Zhs</td>
-                            <td>0.01</td>
+                            <td>10:00</td>
+                            <td>0.01RLT/1.00$</td>
                             <td>0.00047</td>
-                            <td>4 dias</td>
+                            <td>0.06768</td>
+                            <td>2.0304</td>
+                            <td>3.7 dias</td>
                         </tr>
                         <tr>
                             <td>XRP</td>
-                            <td>2.3 Zhs</td>
-                            <td>0.01</td>
+                            <td>10:00</td>
+                            <td>0.01RLT/1.00$</td>
                             <td>0.00047</td>
-                            <td>4 dias</td>
+                            <td>0.06768</td>
+                            <td>2.0304</td>
+                            <td>3.7 dias</td>
                         </tr>
                         <tr>
                             <td>DOGE</td>
-                            <td>2.3 Zhs</td>
-                            <td>0.01</td>
+                            <td>10:00</td>
+                            <td>0.01RLT/1.00$</td>
                             <td>0.00047</td>
-                            <td>4 dias</td>
+                            <td>0.06768</td>
+                            <td>2.0304</td>
+                            <td>3.7 dias</td>
                         </tr>
                         <tr>
                             <td>ETH</td>
-                            <td>2.3 Zhs</td>
-                            <td>0.01</td>
+                            <td>10:00</td>
+                            <td>0.01RLT/1.00$</td>
                             <td>0.00047</td>
-                            <td>4 dias</td>
+                            <td>0.06768</td>
+                            <td>2.0304</td>
+                            <td>3.7 dias</td>
                         </tr>
                         <tr>
                             <td>TRX</td>
-                            <td>2.3 Zhs</td>
-                            <td>0.01</td>
+                            <td>10:00</td>
+                            <td>0.01RLT/1.00$</td>
                             <td>0.00047</td>
-                            <td>4 dias</td>
+                            <td>0.06768</td>
+                            <td>2.0304</td>
+                            <td>3.7 dias</td>
                         </tr>
                         <tr>
                             <td>SOL</td>
-                            <td>2.3 Zhs</td>
-                            <td>0.01</td>
+                            <td>10:00</td>
+                            <td>0.01RLT/1.00$</td>
                             <td>0.00047</td>
-                            <td>4 dias</td>
+                            <td>0.06768</td>
+                            <td>2.0304</td>
+                            <td>3.7 dias</td>
                         </tr>
                     </tbody>
                 </table>
