--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -55,7 +55,7 @@
                     </tr>
                 </table>
                 
-                <button onclick="calcular()">CALCULAR FARM</button>
+                <button type="button" onclick="calcular()">CALCULAR FARM</button>
 
             </form>
 
