--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -99,102 +99,102 @@
                     <tbody>
                         <tr>
                             <td>RLT</td>
-                            <td>10:00</td>
-                            <td>0.01RLT/1.00$</td>
-                            <td>0.00047</td>
-                            <td>0.06768</td>
-                            <td>2.0304</td>
-                            <td>3.7 dias</td>
+                            <td id="RLTtempo">10:00</td>
+                            <td id="RLTbloco"></td>
+                            <td id="RLTfblk"></td>
+                            <td id="RLTfdia"></td>
+                            <td id="RLTfmes"></td>
+                            <td id="RLTsaque"></td>
                         </tr>
                         <tr>
                             <td>RST</td>
-                            <td>10:00</td>
-                            <td>0.01RLT/1.00$</td>
-                            <td>0.00047</td>
-                            <td>0.06768</td>
-                            <td>2.0304</td>
-                            <td>3.7 dias</td>
+                            <td id="RSTtempo">10:00</td>
+                            <td id="RSTbloco"></td>
+                            <td id="RSTfblk"></td>
+                            <td id="RSTfdia"></td>
+                            <td id="RSTfmes"></td>
+                            <td id="RSTsaque"></td>
                         </tr>
                         <tr>
                             <td>BTC</td>
-                            <td>10:00</td>
-                            <td>0.01RLT/1.00$</td>
-                            <td>0.00047</td>
-                            <td>0.06768</td>
-                            <td>2.0304</td>
-                            <td>3.7 dias</td>
+                            <td id="BTCtempo">10:00</td>
+                            <td id="BTCbloco"></td>
+                            <td id="BTCfblk"></td>
+                            <td id="BTCfdia"></td>
+                            <td id="BTCfmes"></td>
+                            <td id="BTCsaque"></td>
                         </tr>
                         <tr>
                             <td>LTC</td>
-                            <td>10:00</td>
-                            <td>0.01RLT/1.00$</td>
-                            <td>0.00047</td>
-                            <td>0.06768</td>
-                            <td>2.0304</td>
-                            <td>3.7 dias</td>
+                            <td id="LTCtempo">10:00</td>
+                            <td id="LTCbloco"></td>
+                            <td id="LTCfblk"></td>
+                            <td id="LTCfdia"></td>
+                            <td id="LTCfmes"></td>
+                            <td id="LTCsaque"></td>
                         </tr>
                         <tr>
                             <td>BNB</td>
-                            <td>10:00</td>
-                            <td>0.01RLT/1.00$</td>
-                            <td>0.00047</td>
-                            <td>0.06768</td>
-                            <td>2.0304</td>
-                            <td>3.7 dias</td>
+                            <td id="BNBtempo">10:00</td>
+                            <td id="BNBbloco"></td>
+                            <td id="BNBfblk"></td>
+                            <td id="BNBfdia"></td>
+                            <td id="BNBfmes"></td>
+                            <td id="BNBsaque"></td>
                         </tr>
                         <tr>
                             <td>POL</td>
-                            <td>10:00</td>
-                            <td>0.01RLT/1.00$</td>
-                            <td>0.00047</td>
-                            <td>0.06768</td>
-                            <td>2.0304</td>
-                            <td>3.7 dias</td>
+                            <td id="POLtempo">10:00</td>
+                            <td id="POLbloco"></td>
+                            <td id="POLfblk"></td>
+                            <td id="POLfdia"></td>
+                            <td id="POLfmes"></td>
+                            <td id="POLsaque"></td>
                         </tr>
                         <tr>
                             <td>XRP</td>
-                            <td>10:00</td>
-                            <td>0.01RLT/1.00$</td>
-                            <td>0.00047</td>
-                            <td>0.06768</td>
-                            <td>2.0304</td>
-                            <td>3.7 dias</td>
+                            <td id="XRPtempo">10:00</td>
+                            <td id="XRPbloco"></td>
+                            <td id="XRPfblk"></td>
+                            <td id="XRPfdia"></td>
+                            <td id="XRPfmes"></td>
+                            <td id="XRPsaque"></td>
                         </tr>
                         <tr>
                             <td>DOGE</td>
-                            <td>10:00</td>
-                            <td>0.01RLT/1.00$</td>
-                            <td>0.00047</td>
-                            <td>0.06768</td>
-                            <td>2.0304</td>
-                            <td>3.7 dias</td>
+                            <td id="DOGEtempo">10:00</td>
+                            <td id="DOGEbloco"></td>
+                            <td id="DOGEfblk"></td>
+                            <td id="DOGEfdia"></td>
+                            <td id="DOGEfmes"></td>
+                            <td id="DOGEsaque"></td>
                         </tr>
                         <tr>
                             <td>ETH</td>
-                            <td>10:00</td>
-                            <td>0.01RLT/1.00$</td>
-                            <td>0.00047</td>
-                            <td>0.06768</td>
-                            <td>2.0304</td>
-                            <td>3.7 dias</td>
+                            <td id="ETHtempo">10:00</td>
+                            <td id="ETHbloco"></td>
+                            <td id="ETHfblk"></td>
+                            <td id="ETHfdia"></td>
+                            <td id="ETHfmes"></td>
+                            <td id="ETHsaque"></td>
                         </tr>
                         <tr>
                             <td>TRX</td>
-                            <td>10:00</td>
-                            <td>0.01RLT/1.00$</td>
-                            <td>0.00047</td>
-                            <td>0.06768</td>
-                            <td>2.0304</td>
-                            <td>3.7 dias</td>
+                            <td id="TRXtempo">10:00</td>
+                            <td id="TRXbloco"></td>
+                            <td id="TRXfblk"></td>
+                            <td id="TRXfdia"></td>
+                            <td id="TRXfmes"></td>
+                            <td id="TRXsaque"></td>
                         </tr>
                         <tr>
                             <td>SOL</td>
-                            <td>10:00</td>
-                            <td>0.01RLT/1.00$</td>
-                            <td>0.00047</td>
-                            <td>0.06768</td>
-                            <td>2.0304</td>
-                            <td>3.7 dias</td>
+                            <td id="SOLtempo">10:00</td>
+                            <td id="SOLbloco">0.01RLT/1.00$</td>
+                            <td id="SOLfblk">0.00047</td>
+                            <td id="SOLfdia">0.06768</td>
+                            <td id="SOLfmes">2.0304</td>
+                            <td id="SOLsaque">3.7 dias</td>
                         </tr>
                     </tbody>
                 </table>
