--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -91,7 +91,7 @@
                     <tbody>
                         <tr>
                             <td>RLT</td>
-                            <td id="RLTtempo">10:00</td>
+                            <td id="RLTtempo"></td>
                             <td id="RLTbloco"></td>
                             <td id="RLTfblk"></td>
                             <td id="RLTfdia"></td>
@@ -100,7 +100,7 @@
                         </tr>
                         <tr>
                             <td>RST</td>
-                            <td id="RSTtempo">10:00</td>
+                            <td id="RSTtempo"></td>
                             <td id="RSTbloco"></td>
                             <td id="RSTfblk"></td>
                             <td id="RSTfdia"></td>
@@ -109,7 +109,7 @@
                         </tr>
                         <tr>
                             <td>BTC</td>
-                            <td id="BTCtempo">10:00</td>
+                            <td id="BTCtempo"></td>
                             <td id="BTCbloco"></td>
                             <td id="BTCfblk"></td>
                             <td id="BTCfdia"></td>
@@ -118,7 +118,7 @@
                         </tr>
                         <tr>
                             <td>LTC</td>
-                            <td id="LTCtempo">10:00</td>
+                            <td id="LTCtempo"></td>
                             <td id="LTCbloco"></td>
                             <td id="LTCfblk"></td>
                             <td id="LTCfdia"></td>
@@ -127,7 +127,7 @@
                         </tr>
                         <tr>
                             <td>BNB</td>
-                            <td id="BNBtempo">10:00</td>
+                            <td id="BNBtempo"></td>
                             <td id="BNBbloco"></td>
                             <td id="BNBfblk"></td>
                             <td id="BNBfdia"></td>
@@ -136,7 +136,7 @@
                         </tr>
                         <tr>
                             <td>POL</td>
-                            <td id="POLtempo">10:00</td>
+                            <td id="POLtempo"></td>
                             <td id="POLbloco"></td>
                             <td id="POLfblk"></td>
                             <td id="POLfdia"></td>
@@ -145,7 +145,7 @@
                         </tr>
                         <tr>
                             <td>XRP</td>
-                            <td id="XRPtempo">10:00</td>
+                            <td id="XRPtempo"></td>
                             <td id="XRPbloco"></td>
                             <td id="XRPfblk"></td>
                             <td id="XRPfdia"></td>
@@ -154,7 +154,7 @@
                         </tr>
                         <tr>
                             <td>DOGE</td>
-                            <td id="DOGEtempo">10:00</td>
+                            <td id="DOGEtempo"></td>
                             <td id="DOGEbloco"></td>
                             <td id="DOGEfblk"></td>
                             <td id="DOGEfdia"></td>
@@ -163,7 +163,7 @@
                         </tr>
                         <tr>
                             <td>ETH</td>
-                            <td id="ETHtempo">10:00</td>
+                            <td id="ETHtempo"></td>
                             <td id="ETHbloco"></td>
                             <td id="ETHfblk"></td>
                             <td id="ETHfdia"></td>
@@ -172,7 +172,7 @@
                         </tr>
                         <tr>
                             <td>TRX</td>
-                            <td id="TRXtempo">10:00</td>
+                            <td id="TRXtempo"></td>
                             <td id="TRXbloco"></td>
                             <td id="TRXfblk"></td>
                             <td id="TRXfdia"></td>
