--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -91,12 +91,12 @@
                     <tbody>
                         <tr>
                             <td>RLT</td>
-                            <td id="RLTtempo"></td>
-                            <td id="RLTbloco"></td>
-                            <td id="RLTfblk"></td>
-                            <td id="RLTfdia"></td>
-                            <td id="RLTfmes"></td>
-                            <td id="RLTsaque"></td>
+                            <td ><span ></span></td>
+                            <td id="RLTbloco"><span id="RLTtempo"></span><</td>
+                            <td><span id="RLTfblk"></span></td>
+                            <td><span id="RLTfdia"></span></td>
+                            <td><span id="RLTfmes"></span></td>
+                            <td>X</td>
                         </tr>
                         <tr>
                             <td>RST</td>
