--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -91,7 +91,7 @@
                     <tbody>
                         <tr>
                             <td>RLT</td>
-                            <td ><span ></span></td>
+                            <td><span id="RLTtempo"></span></td>
                             <td id="RLTbloco"><span id="RLTtempo"></span><</td>
                             <td><span id="RLTfblk"></span></td>
                             <td><span id="RLTfdia"></span></td>
@@ -105,7 +105,7 @@
                             <td id="RSTfblk"></td>
                             <td id="RSTfdia"></td>
                             <td id="RSTfmes"></td>
-                            <td id="RSTsaque"></td>
+                            <td>X</td>
                         </tr>
                         <tr>
                             <td>BTC</td>
@@ -123,7 +123,7 @@
                             <td id="LTCfblk"></td>
                             <td id="LTCfdia"></td>
                             <td id="LTCfmes"></td>
-                            <td id="LTCsaque"></td>
+                            <td>X</td>
                         </tr>
                         <tr>
                             <td>BNB</td>
