--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -92,7 +92,7 @@
                         <tr>
                             <td>RLT</td>
                             <td><span id="RLTtempo"></span></td>
-                            <td id="RLTbloco"><span id="RLTtempo"></span><</td>
+                            <td><span id="RLTbloco"></span><</td>
                             <td><span id="RLTfblk"></span></td>
                             <td><span id="RLTfdia"></span></td>
                             <td><span id="RLTfmes"></span></td>
