--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -181,12 +181,12 @@
                         </tr>
                         <tr>
                             <td>SOL</td>
-                            <td id="SOLtempo">10:00</td>
-                            <td id="SOLbloco">0.01RLT/1.00$</td>
-                            <td id="SOLfblk">0.00047</td>
-                            <td id="SOLfdia">0.06768</td>
-                            <td id="SOLfmes">2.0304</td>
-                            <td id="SOLsaque">3.7 dias</td>
+                            <td id="SOLtempo"></td>
+                            <td id="SOLbloco"></td>
+                            <td id="SOLfblk"></td>
+                            <td id="SOLfdia"></td>
+                            <td id="SOLfmes"></td>
+                            <td id="SOLsaque"></td>
                         </tr>
                     </tbody>
                 </table>
